kubernetes/apps/prod/media/immich/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://{HOST_IMMICH}.${DOMAIN}"
    gethomepage.dev/description: Immich
    gethomepage.dev/group: Media
    gethomepage.dev/icon: immich.png
    # gethomepage.dev/app: xen  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Immich"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: immich.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_IMMICH}.${DOMAIN}`)
      services:
        - name: immich
          kind: Service
          namespace: media
          port: 2283
